build/prod/app/cowsay-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cowsay
  namespace: default
  labels:
    app: cowsay
spec:
  selector:
    matchLabels:
      app: cowsay
  template:
    metadata:
      labels:
        app: cowsay
      annotations: {}
    spec:
      containers:
        - name: default
          image: docker/whalesay
          command:
            - cowsay
          args:
            - Hello DevX!
          env: []
      restartPolicy: Always
      serviceAccountName: cowsay
      securityContext:
        runAsUser: 64198
        runAsGroup: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: azure-image-pull-secret
