build/prod/app/logging-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: logging
  namespace: default
  labels:
    app: logging
spec:
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
      annotations: {}
    spec:
      containers:
        - name: default
          image: demo-logging:latest
          command: []
          args: []
          resources:
            requests:
              cpu: 256m
              memory: 512M
      restartPolicy: Always
      serviceAccountName: logging
      securityContext:
        runAsUser: 64198
        runAsGroup: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: azure-image-pull-secret
