build/prod/app/webapi-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapi
  namespace: default
  labels:
    app: webapi
spec:
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
      annotations: {}
    spec:
      containers:
        - name: default
          image: demo-webapi:latest
          command: []
          args: []
          resources:
            requests:
              cpu: 256m
              memory: 512M
      restartPolicy: Always
      serviceAccountName: webapi
      securityContext:
        runAsUser: 64198
        runAsGroup: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: azure-image-pull-secret
