build/prod/app/dashboard-service.yml
kind: Service
apiVersion: v1
metadata:
  name: dashboard
  namespace: default
spec:
  ports:
    - name: "4000"
      port: 4000
    - name: "4001"
      port: 4001
  selector:
    app: dashboard
  type: ClusterIP
