build/prod/app/webapi-service.yml
kind: Service
apiVersion: v1
metadata:
  name: webapi
  namespace: default
spec:
  ports:
    - name: "8080"
      port: 8080
  selector:
    app: webapi
  type: ClusterIP
